# andrew.clarkson.mn

./: .gitignore  Gruntfile.js  andrew-clarkson-mn.cabal  app.yaml  package.json  server.js  server.py
app/: __init__.py  app.js  index.js
app/admin/: __init__.py  models.py  views.py
app/blog/: __init__.py  models.py  views.py
app/models/: user.js
app/routes/: admin.js  github.js  pages.js  posts.js
app/views/: about.jade  index.jade  layout.jade  post.jade  projects.jade
app/views/admin/: login.jade
posts/: 2016-04-20-contributing-to-open-source.markdown  2016-07-05-thirty-day-blogging-challenge.markdown  2016-07-06-recursion-for-humans.markdown  2016-07-07-learning-clojure-kmeans-part-1.markdown  2016-07-07-learning-clojure-kmeans-part-2.markdown  2016-07-13-race-racism-and-statistics.markdown  2016-07-28-structuring-timeseries-data-in-cassandra.markdown  2016-10-20-explaining-mapreduce-with-naruto.markdown  2016-10-29-graphql-with-akka.markdown  hello-world.md
src/: Main.hs
