name:               andrew-clarkson-mn
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable andrew-clarkson-mn
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
                  , json == 0.9.*
  ghc-options:      -threaded
  default-language: Haskell2010
